@@ -15,6 +15,8 @@ Incompatible changes
   sphinxVerbatimintable which handles captions and wraps lines(ref #2704).
 * latex, replace ``pt`` by TeX equivalent ``bp`` if found in ``width`` or
   ``height`` attribute of an image.
+* latex, if ``width`` or ``height`` attribute of an image is given with no unit,
+  use ``px`` rather than ignore it.
 
 
 Features added
